hard-gists/10295174/run.log
=== Docker Run Log for 10295174 ===
Started at: Mi 29. Okt 11:45:49 CET 2025

[2025-10-29 11:45:49] START: Running container for 10295174
[2025-10-29 11:45:49] SUCCESS: Container 2b907c22d6260deab65608e4443d8c5cbb2a488921a70c04d04e94b3f93c2389 started for 10295174
=== Container logs for 10295174 ===
  File "/snippet.py", line 25
    print "Visible layers: ",
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 10295174 ===
[2025-10-29 11:45:51] INFO: Container 2b907c22d6260deab65608e4443d8c5cbb2a488921a70c04d04e94b3f93c2389 has stopped
